--- a/datos.html
+++ b/datos.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <title>Document</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <script src="js/script3.js"></script>
 </body>
 </html>
